--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,8 @@
     "node": "8"
   },
   "dependencies": {
+    "basic-auth-connect": "^1.0.0",
+    "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
