--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -27,8 +27,7 @@ jobs:
           npm install
           cd ..
       - name: deploy to Firebase Hosting
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy
+        run: |
+          firebase deploy --token $FIREBASE_TOKEN
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
