--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,6 +21,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install, build
         run: |
+          npm install -g firebase-tools
           npm install
           npm run build
           cd ./functions
