--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.1",
+    "file-loader": "^6.0.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
