--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    
+    "typeRoots": ["node_modules/@types", "types"]
   },
-  "include": ["./src"]
+  "include": ["./src", "./types"]
 }
