--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.0"
   },
@@ -17,8 +19,11 @@
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.1",
+    "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
     "url-loader": "^4.1.0",
