--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazyload": "^3.0.0",
     "react-slick": "^0.26.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
@@ -19,6 +20,7 @@
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/react-lazyload": "^2.6.0",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.1",
     "css-loader": "^3.6.0",
