--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --config webpack.dev.js --open"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.5",
     "clean-webpack-plugin": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -25,6 +26,8 @@
     "@types/styled-components": "^5.1.1",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
