eslintとprettierを追加、および、webpackのプラグインを追加してfaviconとbundle.jsの読み込みを動的にするように修正

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@types/react-router-dom": "^5.1.5",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint-loader": "^4.0.2",
+    "favicons-webpack-plugin": "^3.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-lazyload": "^3.0.0",
@@ -24,8 +26,17 @@
     "@types/react-lazyload": "^2.6.0",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.1",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "css-loader": "^3.6.0",
+    "eslint": "^7.5.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "prettier": "^2.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1",
