--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,9 +21,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install, build
         run: |
-          npm install -g firebase-tools
-          npm install
-          npm run build
+          yarn global add firebase-tools
+          yarn install
+          yarn run build
           cd ./functions
           npm install
           cd ..
