--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "mint-2020-summer-trip",
   "version": "1.0.0",
   "private": true,
+  "license": "0BSD",
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --config webpack.dev.js"
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "eslint-loader": "^4.0.2",
     "favicons-webpack-plugin": "^3.0.1",
+    "gatsby": "^2.24.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-lazyload": "^3.0.0",
@@ -46,5 +52,12 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YudaiTamura/mint-2020-summer-trip"
+  },
+  "bugs": {
+    "url": "https://github.com/YudaiTamura/mint-2020-summer-trip/issues"
   }
 }
