--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-loader": "^4.0.2",
     "favicons-webpack-plugin": "^3.0.1",
     "gatsby": "^2.24.14",
+    "gatsby-cli": "^2.12.68",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-lazyload": "^3.0.0",
