--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "eslint-loader": "^4.0.2",
-    "favicons-webpack-plugin": "^3.0.1",
     "gatsby": "^2.24.14",
     "gatsby-cli": "^2.12.68",
     "react": "^16.13.1",
@@ -30,29 +27,15 @@
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "@types/react-lazyload": "^2.6.0",
-    "@types/react-router-dom": "^5.1.5",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.1",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "css-loader": "^3.6.0",
     "eslint": "^7.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
     "prettier": "^2.0.5",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.6",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "typescript": "^3.9.6"
   },
   "repository": {
     "type": "git",
