--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install, build
         run: |
-          yarn global add firebase-tools
+          npm install -g firebase-tools
           yarn install
           yarn run build
           cd ./functions
