--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "gatsby": "^2.24.14",
     "gatsby-cli": "^2.12.68",
+    "gatsby-image": "^2.4.14",
+    "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-transformer-sharp": "^2.5.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-lazyload": "^3.0.0",
@@ -23,19 +27,12 @@
     "styled-reset": "^4.2.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.14",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-lazyload": "^2.6.0",
-    "@types/react-slick": "^0.23.4",
-    "@types/styled-components": "^5.1.1",
     "eslint": "^7.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
-    "prettier": "^2.0.5",
-    "typescript": "^3.9.6"
+    "prettier": "^2.0.5"
   },
   "repository": {
     "type": "git",
