--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^2.24.14",
     "gatsby-cli": "^2.12.68",
     "gatsby-image": "^2.4.14",
+    "gatsby-plugin-manifest": "^2.4.22",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.24",
     "gatsby-source-filesystem": "^2.3.23",
