--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.14",
     "gatsby-cli": "^2.12.68",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-manifest": "^2.4.22",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-contentful": "^2.3.35",
     "gatsby-source-filesystem": "^2.3.23",
     "gatsby-transformer-sharp": "^2.5.12",
